[gd_scene load_steps=14 format=2]

[ext_resource path="res://juego/Proyectil/canion.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/Nave/Nave.png" type="Texture" id=2]
[ext_resource path="res://juego/Nave/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://juego/Proyectil/LaserB/LaserBeam2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego/Nave/Player/Estela/Trail2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/Nave/Player/Motor/MotorSFX.tscn" type="PackedScene" id=6]
[ext_resource path="res://juego/Proyectil/ImpactoSFX.ogg" type="AudioStream" id=7]
[ext_resource path="res://juego/Nave/Player/MaterialFisico.tres" type="PhysicsMaterial" id=8]
[ext_resource path="res://juego/Nave/Player/CameraPlayer.gd" type="Script" id=9]
[ext_resource path="res://juego/Nave/Player/Escudo/Escudo.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 43.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spawn"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.7, 0.7 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="RigidBody2D"]
position = Vector2( 960, 540 )
z_index = 50
z_as_relative = false
collision_mask = 22
physics_material_override = ExtResource( 8 )
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
can_sleep = false
angular_damp = 4.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
estela_maxima = 160

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 0 )
z_index = 50
z_as_relative = false
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="canion" parent="." instance=ExtResource( 1 )]

[node name="PuntoIzq" parent="canion" index="0"]
position = Vector2( 18, -30 )

[node name="PuntoDer" parent="canion" index="1"]
position = Vector2( 18, 30 )

[node name="DisparoSFX" parent="canion" index="2"]
pitch_scale = 0.82

[node name="LaserBeam2D" parent="." instance=ExtResource( 4 )]
max_length = 1600.0

[node name="FillLine2D" parent="LaserBeam2D" index="0"]
position = Vector2( 43, 0 )
points = PoolVector2Array( 0, 0, 50, 0, 100, 0 )

[node name="EstelaPuntoInicio" type="Position2D" parent="."]
position = Vector2( -18, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Trail2D" parent="EstelaPuntoInicio" instance=ExtResource( 5 )]
position = Vector2( -0.410072, 1.43051e-06 )
scale = Vector2( 0.992806, 0.82 )
points = PoolVector2Array( -7, 0, 32, 0 )
width = 50.0
is_emitting = true
lifetime = 0.9
max_points = 150
target_path = NodePath("..")

[node name="MotorSFX" parent="." instance=ExtResource( 6 )]
tiempo_transicion = 0.1
volumen_apagado = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/RESET = SubResource( 3 )
anims/spawn = SubResource( 4 )

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="CameraPlayer" type="Camera2D" parent="."]
current = true
script = ExtResource( 9 )

[node name="TweenZoom" type="Tween" parent="CameraPlayer"]

[node name="Escudo" parent="." instance=ExtResource( 10 )]

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="canion"]
[editable path="LaserBeam2D"]
[editable path="Escudo"]
